# meridian-electronics-assistant

./: .gitignore  README.md
.github/workflows/: deploy.yml
backend/: deploy.py  lambda_handler.py  main.py  pyproject.toml  test.db
backend/app/: __init__.py  chat_service.py  database.py  main.py  models.py  repository.py  routes.py  schemas.py
backend/app/api/: router.py
backend/app/core/: agent.py  auth.py  config.py  customer.py  mcp_client.py  order.py  product.py  templates.py
backend/app/db/: session.py
backend/app/models/: orders.py
backend/app/modules/orders/: repository.py  schemas.py  service.py
backend/app/modules/users/: models.py  repository.py  routes.py  schemas.py  service.py
backend/app/routes/: orders.py
backend/app/services/: services.py
frontend/: .env.example  README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.css  app.html  app.spec.ts  app.ts  chat.service.ts
frontend/src/environments/: environment.ts
scripts/: deploy.ps1  deploy.sh  destroy.ps1  destroy.sh
terraform/: backend.tf  main.tf  outputs.tf  prod.tfvars  terraform.tfvars  variables.tf
